@@ -5,6 +5,9 @@ DirBrowser.py mDirBrowser.py mEditorCtrl.py
 Mixin.py            Disable RELOAD_MIXINS flag, if this is True, when you close 
                     directory browser and reopen it again, some extended menu will
                     not work.
+FindReplace.py meide.py
+                    When you open Find & Replace panel, and if findtext or replacetext
+                    control has focus, you can press ESC to close Find & Replace panel
                     
 [2007/09/22]
 mHelp.py            Fix webbrowser bug. Thanks Tom Eubank
